# qemii-detector

./: .gitignore  .travis.yml  README.md  tox.ini
control/: .gitattributes  MANIFEST.in  requirements.txt  setup.cfg  setup.py  tox.ini
control/FileInterface/: adapter.py
control/QEM-Client/: QemCalibrator.py  QemDetectorAdapter.py  QemFem.py  QemFemAdapter.py  RdmaUDP.py  setup.cfg  setup.py
control/QEM-Client/QemClient/: ImageStreamUDP.py  QemCalibrator.py  QemDAQ.py  QemDetectorAdapter.py  QemFem.py  QemVectorFile.py  RdmaUDP.py  VectorFile.py  VectorFileAdapter.py
control/QEM-FEM/: BackplaneAdapter.py  MANIFEST.in  setup.cfg  setup.py  tpl0102.py
control/QEM-FEM/QemFem/: Backplane.py  BackplaneAdapter.py  FemAdapter.py  ad5272.py  ad5694.py  i2c_container.py  si570.py
control/QEM-FEM/config/: fem.cfg  fem_debug.cfg
control/client/: .gitattributes  MANIFEST.in  setup.cfg  setup.py  tox.ini
control/client/test/: test_adapter.py
control/fem/: .gitattributes  MANIFEST.in  setup.cfg  setup.py  tox.ini
control/fem-adapter/: MANIFEST.in  fem_setup.py  setup.cfg  setup.py
control/fem-adapter/config/: qem.cfg  qem.conf
control/fem-adapter/logger/: qem_logger.py
control/fem-adapter/qem/: _version.py  adapter.py  backplane.py  backplane_data.py  gpio_reset.py  i2ctest.py
control/fem-adapter/requests/: capture.py  qem_setter.py  qem_setter_demo.py  simple_request.py
control/host-adapter/: README.md  setup.py  tmp2.pkl  tmp3.pkl
control/static/: index.html  qem.html
control/workshop/: adapter.py
control/workshop.egg-info/: PKG-INFO  SOURCES.txt
data/: CMakeLists.txt
data/config/: CMakeLists.txt  configure_odin_data.py  fp_qemii_config.json  fp_qemii_config_back.json  fp_test_qemii_1.config  fp_test_qemii_2.config  fr_qemii_config.json  fr_test_qemii_1.config  fr_test_qemii_2.config  odin_data_qemii_config_fp_plugins.json
data/frameProcessor/src/: CMakeLists.txt  QemiiCorrectionPlugin.cpp  QemiiProcessPlugin.cpp
data/frameReceiver/src/: CMakeLists.txt  QemiiFrameDecoder.cpp  QemiiFrameDecoderLib.cpp
(+100 files in other folders)
